improve front-end validation feedback
add keyup validation for password (weak, med, strong)
add classes with styling for error messages

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -45,7 +45,7 @@
   <div class="field">
     <%= f.label :password %><br />
     <%= f.password_field :password %>
-    <span id="password_error"> Password should have at least 6 characters</span>
+    <span id="password_error"> </span>
   </div>
   
   <div class="field">
